# rbfxHorrorSurvival

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  push_win_x64.bat
scripts/: cmake_gen.ps1  itch_push.ps1
src/: BaseApplication.cpp  BaseApplication.h  BaseLevel.cpp  BaseLevel.h  CustomEvents.h  GameScreen.cpp  GameScreen.h  HorrorSurvivalApp.cpp  HorrorSurvivalApp.h  LevelManager.cpp  LevelManager.h  LevelManagerEvents.h  SceneManager.cpp  SceneManager.h  SceneManagerEvents.h  main.cpp
src/AndroidEvents/: AndroidDefines.h  NSObject.h  ServiceCmd.cpp  ServiceCmd.h  ServiceEvents.h
src/Audio/: AudioEvents.h  AudioManager.cpp  AudioManager.h  AudioManagerDefs.h
src/BehaviourTree/: BehaviourTree.cpp  BehaviourTree.h  BehaviourTreeDefs.h
src/Config/: ConfigFile.cpp  ConfigFile.h  ConfigManager.cpp  ConfigManager.h
src/Console/: ConsoleHandler.cpp  ConsoleHandler.h  ConsoleHandlerEvents.h
src/Generator/: Generator.cpp  Generator.h  PerlinNoise.h  SimplexNoise.cpp  SimplexNoise.h
src/Globals/: CollisionLayers.h  GUIDefines.h  Settings.h  ViewLayers.h
src/Input/: ControlDefines.h  ControllerEvents.h  ControllerInput.cpp  ControllerInput.h
src/Input/Controllers/: BaseInput.h  JoystickInput.cpp  JoystickInput.h  KeyboardInput.cpp  (+5 more)
src/Levels/: Credits.cpp  Credits.h  ExitGame.cpp  ExitGame.h  Level.cpp  Level.h  Loading.cpp  Loading.h  MainMenu.cpp  MainMenu.h  Splash.cpp  Splash.h
src/Messages/: Achievements.cpp  Achievements.h  MessageEvents.h  Notifications.cpp  Notifications.h  SingleAchievement.cpp  SingleAchievement.h
src/Mods/: ModLoader.cpp  ModLoader.h
src/Nakama/: NakamaEvents.h  NakamaManager.cpp  NakamaManager.h  NetworkProtocol.h  PacketHandler.cpp  PacketHandler.h
src/Network/: NetworkEvents.h
src/PackageManager/: PackageManager.cpp  PackageManager.h  PackageManagerEvents.h
src/Player/: Player.cpp  Player.h  PlayerEvents.h  PlayerState.cpp  PlayerState.h
src/State/: State.cpp  State.h  StateEvents.h
src/UI/: BaseWindow.cpp  BaseWindow.h  WindowEvents.h  WindowManager.cpp  WindowManager.h
(+30 files in other folders)
